# fast-python-template

./: LICENSE  README.md  pyproject.toml  pytest.ini
